--- a/src/Components/PlaylistTable.css
+++ b/src/Components/PlaylistTable.css
@@ -2,15 +2,6 @@
     /* font-family: 'Exo 2' */
     margin-left: 10px;
     margin-right: 10px;
-    font-size: large;
+    /* font-size: large; */
 }
 
-.PlaylistName {
-    /* font-family: 'Exo 2'; */
-    text-align: center;
-    font-size: x-large;
-    padding-top: 0px;
-    padding-left: 4px;
-    padding-right: 4px;
-    padding-bottom: 5px;
-}
